--- a/web_login_registor/home.html
+++ b/web_login_registor/home.html
@@ -158,15 +158,12 @@ body.loggedin {
 
     <body>
         {% extends 'layout.html' %}
-
         {% block title %}Home{% endblock %}
-
         {% block content %}
         <h2>Home Page</h2>
         <p>Welcome back, {{ username }}!</p>
         <p><h1>SO FAR SO GOOD!</h1></p>
-        
-        <a href="{{url_for('dfd')}}"class="active"><h1>dfd</h1></a>
+        <a href="{{url_for('dfd')}}"class="active"><h1>Cick here to start </h1></a>
 
         <!-- <div class="dfd">
             <h1>DFD</h1>
